plans: site 7 measured -- check 112.28 s -> 54.17 s; ADR-0180 program closed
Docs-only. `measurements.md` gains a dated site-7 section: output identity,
the wall at all three cells in both phases, peak RSS, the `-Xlog:gc*`
post-collection floor before and after, a matched JFR pair recorded in this
session, and the program's own close table.

THE WALL. Generate falls by roughly a third at every cell (108.66 -> 70.10 s
at 7,500; 28.03 -> 19.94 at 2,500; 169.22 -> 98.66 at 22,500) because the
in-run self-check folds the log ZERO times. Check falls by roughly a half
(53.31 -> 26.29; 21.39 -> 13.67; 112.28 -> 54.17) because twenty folds became
one. `replay` reads 0.00% of the generate phase in the after profile -- not a
smaller share, a frame that is not on any stack -- and 48.17% -> 5.16% of
check.

THE HYPOTHESIS THE ADDENDUM LEFT STANDING IS REFUTED AS STATED. It reasoned
from a 3,863 MB transient peak to 67,500 arrivals being unreachable and told
site 7 to test it rather than inherit it. The top cell's generate peak is
1,985 MB against a 3.88 GB `MaxHeapSize` where it was 3,476 MB, and the
instrument the addendum named for the question -- the post-collection floor --
agrees rather than merely following: the live set at the end of a 7,500 run is
409 MB against 562 MB, and G1 asks for 960 MB of heap capacity where it asked
for 1,880 MB.

THE PROGRAM. Seven sites, one session each in R-order-2's order, every one
bracket-proven over byte-identical logs. At 22,500 arrivals generate went
1,472.56 s -> 98.66 s, 14.9x; the generate+check pair is now 152.83 s where
the program found 1,472.56 s of generate alone. `roadmap.md#performance-
residual-sites` rotates to `## Done` as one line, and the remaining `## Next`
rows renumber 1..6 so `head` is still what is next.

TWO THINGS RECORDED RATHER THAN FIXED. The constant-factor exclusions ADR-0180
declined to charter are now the largest single items in each phase -- the EDN
parse at 34.25% self of check, `licensed-bed-ids`' inner 